<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/margin_bottom_parking_size_update_dialog_fragment"
    android:layout_marginTop="@dimen/margin_top_parking_size_update_dialog_fragment"
    android:layout_marginLeft="@dimen/margin_left_parking_size_update_dialog_fragment"
    android:layout_marginRight="@dimen/margin_right_parking_size_update_dialog_fragment">

    <TextView
        android:id="@+id/fragment_tittle_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/fragment_tittle_text"
        android:textSize="@dimen/text_view_size_parking_size_update_dialog_fragment"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/parking_available_edit_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/parking_available_edit_text"
        android:layout_width="@dimen/edit_text_width_parking_size_update_dialog_fragment"
        android:layout_height="@dimen/edit_text_height_parking_size_update_dialog_fragment"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@id/confirm_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_tittle_text_view"/>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_button_text"
        app:layout_constraintTop_toBottomOf="@id/parking_available_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/cancel_button"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button_text"
        app:layout_constraintTop_toBottomOf="@id/parking_available_edit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/confirm_button"/>

</androidx.constraintlayout.widget.ConstraintLayout>
